# libdrv-st-usart

./: Kconfig  README.md  meson.build  meson.options
.github/workflows/: build.yml
configs/: defconfig
dts/: sample.dts
include/: meson.build
include/usart/: usart_driver.h
src/: meson.build  stm32_usart_driver.c
subprojects/: merlin.wrap
support/meson/: cm33-none-eabi-gcc.ini
